[gd_scene load_steps=13 format=1]

[ext_resource path="res://game/route/route_view.gd" type="Script" id=1]
[ext_resource path="res://game/sector/sector_view.tscn" type="PackedScene" id=2]
[ext_resource path="res://components/controller/hand.gd" type="Script" id=3]
[ext_resource path="res://components/controller/cooldownbar.gd" type="Script" id=4]
[ext_resource path="res://components/ui/card_display.tscn" type="PackedScene" id=5]
[ext_resource path="res://components/ui/focus_display.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/fonts/PressStart2P-8pt.fnt" type="BitmapFont" id=7]
[ext_resource path="res://components/ui/item_stats.tscn" type="PackedScene" id=8]
[ext_resource path="res://components/controller/deck.gd" type="Script" id=9]
[ext_resource path="res://components/controller/main_controller.gd" type="Script" id=10]

[sub_resource type="StyleBoxFlat" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.582031, 0.150055, 0.150055, 1 )
light_color = Color( 0.828125, 0.181152, 0.181152, 1 )
dark_color = Color( 0.46875, 0.0604248, 0.0604248, 1 )
border_size = 0
border_blend = true
draw_bg = true

[sub_resource type="StyleBoxFlat" id=2]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.6, 0.6, 0.6, 1 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.347656, 0.347656, 0.347656, 1 )
border_size = 0
border_blend = true
draw_bg = true

[node name="RouteView" type="Node2D"]

script/script = ExtResource( 1 )
__meta__ = { "__editor_plugin_screen__":"Script", "_edit_lock_":true }

[node name="SectorView" parent="." instance=ExtResource( 2 )]

[node name="HUD" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="UI_hook" type="Node2D" parent="HUD"]

editor/display_folded = true
transform/pos = Vector2( 32, 320 )
__meta__ = { "_edit_lock_":true }

[node name="Hand" type="Node2D" parent="HUD/UI_hook"]

visibility/visible = false
transform/pos = Vector2( 64, 64 )
script/script = ExtResource( 3 )

[node name="CooldownBar" type="ProgressBar" parent="HUD/UI_hook"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 32.0
margin/top = 163.0
margin/right = 512.0
margin/bottom = 179.0
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
percent/visible = false
script/script = ExtResource( 4 )

[node name="CardDisplay" parent="HUD" instance=ExtResource( 5 )]

[node name="FocussDisplay" parent="HUD" instance=ExtResource( 6 )]

[node name="base" type="Control" parent="HUD"]

editor/display_folded = true
visibility/visible = false
anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 128.0
__meta__ = { "_edit_lock_":true }

[node name="Input Description" type="Label" parent="HUD/base"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 16.0
margin/top = 16.0
margin/right = 336.0
margin/bottom = 96.0
custom_fonts/font = ExtResource( 7 )
text = "Controls:\n- arrow keys to move\n- A/S to change card\n- D to evoke card\n- ESC to save & quit\n- SHIFT+S to save & back to menu"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="item_stats" parent="HUD/base" instance=ExtResource( 8 )]

[node name="deck" type="Control" parent="HUD"]

anchor/left = 1
anchor/top = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 120.0
margin/top = 64.0
margin/right = 16.0
margin/bottom = 16.0
script/script = ExtResource( 9 )

[node name="Controller" type="Node" parent="HUD"]

script/script = ExtResource( 10 )


